// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonitorPageLink component renders a help link when link parameters present 1`] = `
<ReactRouterEuiLink
  data-test-subj="monitor-page-link-bad-ssl"
  to="/monitor/YmFkLXNzbA==/selectedPingStatus=down"
/>
`;

exports[`MonitorPageLink component renders the link properly 1`] = `
<ReactRouterEuiLink
  data-test-subj="monitor-page-link-bad-ssl"
  to="/monitor/YmFkLXNzbA=="
/>
`;
